force-app/main/default/objects/LogsSetting__mdt/LogsSetting__mdt.object-meta.xml
<CustomObject>
    <label>Logs Setting</label>
    <pluralLabel>Logs Settings</pluralLabel>
</CustomObject>