force-app/main/default/objects/LogsSetting__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akamai_API</fullName>
            </value>
            <value>
                <fullName>ATG_API</fullName>
            </value>
            <value>
                <fullName>Fractalist_API</fullName>
            </value>
            <value>
                <fullName>Google_Analytics_API</fullName>
            </value>
            <value>
                <fullName>IDENTITY_AccountMatching_Utils</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Login_CTRL</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Registration_CTRL</fullName>
                <default>true</default>
                <label>IDENTITY_Registration_CTRL</label>
            </value>
            <value>
                <fullName>IDENTITY_RegistrationHandler</fullName>
            </value>
            <value>
                <fullName>IDENTITY_URLRewriter</fullName>
            </value>
            <value>
                <fullName>IDENTITY_UserManagement_BATCH</fullName>
            </value>
            <value>
                <fullName>IDENTITY_Utils</fullName>
            </value>
            <value>
                <fullName>IDENTITY_WS_AccountMatching</fullName>
            </value>
            <value>
                <fullName>IDENTITY_WS_Contactability</fullName>
            </value>
            <value>
                <fullName>IM_CheckPushNotifications</fullName>
            </value>
            <value>
                <fullName>IM_ClientListWS</fullName>
            </value>
            <value>
                <fullName>IM_FollowUp_WS</fullName>
            </value>
            <value>
                <fullName>IM_TeamManagment</fullName>
            </value>
            <value>
                <fullName>IM_WS_Assets</fullName>
            </value>
            <value>
                <fullName>IM_WS_CareService</fullName>
            </value>
            <value>
                <fullName>IM_WS_PushNotifications</fullName>
            </value>
            <value>
                <fullName>IM_WSAddCLMembers</fullName>
            </value>
            <value>
                <fullName>IM_WSConfig</fullName>
            </value>
            <value>
                <fullName>IM_WSRemoveCLMembers</fullName>
            </value>
            <value>
                <fullName>MarketingCloud_API</fullName>
            </value>
            <value>
                <fullName>MYCC_WS_Client</fullName>
            </value>
            <value>
                <fullName>Notification_Sender</fullName>
            </value>
            <value>
                <fullName>SM_WS01_SocialMediaIdentifiers</fullName>
            </value>
            <value>
                <fullName>Tencent_API</fullName>
            </value>
            <value>
                <fullName>BL_ICON_TermsConditions</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>