force-app/main/default/objects/LogsSetting__mdt/fields/Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>Batch_Limit__c</fullName>
    <label>Batch_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>