force-app/main/default/objects/LogsSetting__mdt/fields/Clean_Up_Every__c.field-meta.xml
<CustomField>
    <fullName>Clean_Up_Every__c</fullName>
    <inlineHelpText>in days</inlineHelpText>
    <label>Clean Up Every</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>