force-app/main/default/objects/LogsSetting__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always run</fullName>
            </value>
            <value>
                <fullName>Per-User</fullName>
                <default>true</default>
                <label>Per-User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>