force-app/main/default/objects/LogsSetting__mdt/fields/Notification_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Notification_to_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A weekly batch send by email all error logs created in the week, to LV Factory Team.
Only log with ERROR level will be sent.</description>
    <label>Notification to Support</label>
    <type>Checkbox</type>
</CustomField>