force-app/main/default/objects/LogsSetting__mdt/fields/To_Log__c.field-meta.xml
<CustomField>
    <fullName>To_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Log</label>
    <type>Checkbox</type>
</CustomField>